# optimization

./: CMakeLists.txt  INSTALL  LICENSE  README.md
data/mesh/capteur/: capteur.geo  capteur_data.geo
data/mesh/elesta/: streamers_2D.geo  streamers_2D_six_codes.geo
doc/pseudocode/: all_biblio.bib  ex_shared.tex  ex_supplement.tex  pseudocode.aux  pseudocode.tex
examples/: CMakeLists.txt
examples/optimization/: CMakeLists.txt  density_optimization.cpp  density_optimization_p.cpp
src/: CMakeLists.txt
src/fem/: CMakeLists.txt  datacollection.cpp  datacollection.hpp
src/mesh/: CMakeLists.txt  mesh.cpp  mesh.hpp
